fix(orchestration): use pre-installed MariaDB driver for MySQL connections